Fixed quote overflow

--- a/tags/styles/quote.module.scss
+++ b/tags/styles/quote.module.scss
@@ -8,6 +8,7 @@
     font-size: 1.1rem;
     font-weight: 300;
     border-left: 8px solid $lightGray;
+    word-wrap: break-word;
 
     & h4{
         display: block;
